Added client and service ticket request